Add client and message collections
